--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "express": "^5.1.0",
-    "mongodb": "^6.17.0"
+    "mongodb": "^6.17.0",
+    "rollup": "^4.52.4"
   },
   "keywords": [],
   "author": "",
